--- a/JavaScript_works/DOM/bank/Registration/index.html
+++ b/JavaScript_works/DOM/bank/Registration/index.html
@@ -7,6 +7,7 @@
     <title>Registration | Bank</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/favicon.jpg" type="image/x-icon">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="body">
@@ -23,7 +24,7 @@
                     <div class="col-md-6 col-12   ">
                         
                             <h2 class="text-center mb-2">Signup to Bank</h2>
-                        <p class="text-center mb-5">Already have an account? <a class="a" href="">Sign In</a></p>
+                        <p class="text-center mb-5">Already have an account? <a class="a" href="../Login/index.html">Sign In</a></p>
                         <form action="" class="form-group col-md-7 col-10 mb-5 ms-auto me-auto">
                             <div class="mb-4">
                                 <input type="text" name="" id="username" class="form-control p-2 " placeholder="Full name">
